--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.4.7",
     "autoprefixer": "10.4.14",
+    "mysql2": "^3.3.1",
     "next": "13.4.2",
+    "pg-hstore": "^2.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sequelize": "^6.31.1",
     "tailwindcss": "3.3.2"
   }
 }
